and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 30th, 2013, M. Verderi (gflash-V09-06-02)
--------------------------
- Replace CLHEP::RandXXX by G4RandXXX for thread safety in
       src/GFlashSamplingShowerParameterisation.cc
       src/GFlashHomoShowerParameterisation.cc

Apr 11th, 2013, G.Cosmo (gflash-V09-06-01)
-----------------------
- Removed unnecessary thread-local specification in
  GVFlashShowerParameterisation::gam().

Feb 27th, 2013, M.Verderi (gflash-V09-06-00)
-------------------------
- Fix warning compilation in clang from GFlashShowerModelMessenger.hh about
  unused data member.

Jul 5th, 2012 G.Cosmo (gflash-V09-05-00)
---------------------
- Explicitly use inclusion of headers for system of units and physical
  constants, in plan to remove implicit inclusion from globals.hh.

Nov 3rd, 2011 M.Verderi (gflash-V09-04-02)
-----------------------
- Fix compilation warnings in GFlashHomoShowerParameterisation.cc
  GFlashSamplingShowerParameterisation.cc due to respectiveley deletion of
      GVFlashHomoShowerTuning
      GFlashSamplingShowerTuning
  which have no virtual destructor.
  Empty constructor and destructor added to these (utility) classes.

Sep 20th, 2011 M.Verderi (gflash-V09-04-01)
------------------------
- Fixed bug in G4FlashShowerModel::ModelTrigger :
  was  " (Ekin > Emin) || (Ekin < Emax) " instead of
       " (Ekin > Emin) && (Ekin < Emax) "

Jul 5th, 2011 G.Cosmo (gflash-V09-04-00)
---------------------
- Fixed Coverity defects, mainly related to uninitialised static data.

May 8th, 2005 G.Cosmo (gflash-V08-00-00)
---------------------
- Fix compilation warning on SUN-CC in GFlashSamplingShowerParameterisation.cc.
